--- a/src/app/components/Header/Header.module.css
+++ b/src/app/components/Header/Header.module.css
@@ -31,8 +31,9 @@
 
 .mainNav {
   display: flex;
-  justify-content: space-evenly;
-  align-items: center;
+  justify-content: space-between;
+  width: 872px;
+  margin: 0 auto;
 }
 
 .navLink {
